# data-engineering-bootcamp

00-bootcamp-project/: main-api.py  main-postgres.py  main-sftp.py  pyproject.toml
